# tmux-mcp

./: .env.example  .envrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
src/tmux_mcp/: __init__.py  auth.py  enricher.py  ratelimit.py  reports.py  server.py
tests/: conftest.py  test_auth.py  test_enricher.py  test_ratelimit.py  test_reports.py  test_server.py
tools/shells/: README.md
tools/shells/zsh/: repo-tmux.zsh
