[project]
name = "tmux-mcp"
version = "0.1.0"
description = "MCP server bridging Claude Chat ↔ Claude Code via tmux over Tailscale"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Benny Thomas", email = "jan.thomas@speilbildet.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pydantic>=2.7",
    "pyjwt[crypto]>=2.8",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.scripts]
tmux-mcp = "tmux_mcp:main"

[dependency-groups]
dev = [
    "ruff>=0.8",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
