[project]
name = "tmux-mcp"
version = "0.1.0"
description = "MCP server bridging Claude Chat ↔ Claude Code via tmux over Tailscale"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Benny Thomas", email = "jan.thomas@speilbildet.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pydantic>=2.7",
    "pyjwt[crypto]>=2.8",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "argcomplete>=3.6.3",
]

[project.scripts]
tmux-mcp = "tmux_mcp.server:main"
tmux-mcp-enricher = "tmux_mcp.enricher:main"
tmux-mcp-report = "tmux_mcp.reports:cli_main"

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pre-commit>=4.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
